<resources>
    <string name="app_name">Shoutout</string>
    <string name="reg_first_name">First Name</string>
    <string name="reg_last_name">Last Name</string>
    <string name="reg_email">Email</string>
    <string name="reg_password">Password</string>
    <string name="reg_username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="compose">Compose</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="avatar">Avatar</string>
    <string name="gallery_preview">Gallery Preview</string>
    <string name="gallery_count">Gallery Count</string>
    <string name="like_button">Like Button</string>
    <string name="comment_button">Comment Button</string>
    <string name="share_button">Share Button</string>
    <string name="logout">Logout</string>
    <string name="ui_or">or</string>
    <string name="register_new">Register new user</string>
    <string name="createPost_header">Create new post</string>
    <string name="createPost_addImage">Add image</string>
    <string name="createPost_post">Post</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="display_name">Display Name</string>
    <string name="birthday">Birthday</string>
    <string name="biography">Biography</string>
    <string name="display_name_hint">Name seen by others</string>
    <string name="biography_hint">Tell us something about yourself</string>
    <string name="birthday_hint">Month/Day/Year</string>
    <string name="username_format">\@%s</string>
    <string name="profile_birthday">Birthday: %s</string>
    <string name="profile_followers">Followers: %d</string>
    <string name="profile_following">Following: %d</string>
    <string name="profile_joined">Joined: %s</string>
    <string name="unfollow">Unfollow</string>
    <string name="view_profile">View profile</string>
    <string name="follow">Follow</string>
    <string name="loadMorePosts">Load more posts</string>
    <string name="searchUser">Search for user</string>
    <string name="biography_text_here">Biography text here</string>
    <string name="biography_goes_here">Biography goes here</string>
    <string name="load_more_posts">Load more posts</string>
</resources>