<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_outline_home_30"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_outline_search_30"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_compose"
        android:icon="@drawable/ic_outline_create_30"
        android:title="@string/compose"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_profile"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/view_profile" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_outline_settings_30"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>