<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.fragment.UserSettingsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv__edit_profile_image"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/avatar"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/btn_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="110dp"
                android:layout_marginRight="110dp"
                android:drawableEnd="@drawable/ic_baseline_add_photo_alternate_24"
                android:drawableRight="@drawable/ic_baseline_add_photo_alternate_24"
                android:drawablePadding="2dp"
                android:text="@string/change_avatar"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_display_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/display_name"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_display_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/display_name_hint"
                android:inputType="textPersonName"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/birthday"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/birthday_hint"
                android:inputType="date"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_biography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/biography"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_biography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/biography_hint"
                android:inputType="textPersonName"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/save_changes" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>