<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    app:barrierAllowsGoneWidgets="false"
    app:layout_constrainedHeight="true"
    app:layout_constrainedWidth="true">

    <TextView
        android:id="@+id/text_app_register"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="132dp"
        android:fontFamily="sans-serif"
        android:text="@string/app_name"
        android:textColor="@color/teal_700"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        app:layout_constraintBottom_toTopOf="@id/login_password"
        app:layout_constraintTop_toBottomOf="@id/text_app_register">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/reg_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/login_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="159dp"
        android:onClick="handleLogin"
        android:text="@string/login"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/teal_700"
        android:onClick="handle_signUp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="or"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

</androidx.constraintlayout.widget.ConstraintLayout>